--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,76 @@
 body {
-	background-color: rgb(0, 64, 64);
-	padding-top: 24px;
+    background-image: url(../images/hintergrundbild.png);
+    background-size: cover;
+    margin: 0;
+    padding-top: 50px;
+    font-family: Arial, sans-serif;
+    color: #333;
+}
+
+.header {
+    text-align: center;
+    background-color: #f9f9f9;
+    padding: 20px;
+}
+
+.logo-container {
+    float: left;
+}
+
+.logo {
+    width: 100px;
+    height: 100px;
+}
+
+.title {
+    font-size: 40px;
+    margin: 0;
+}
+
+.navigation {
+    background-color: #333;
+    padding: 10px;
+}
+
+.nav-links {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.nav-item {
+    display: inline;
+    margin: 10px;
+}
+
+.nav-item a {
+    font-size: 20px;
+    color: #f9f9f9;
+    text-decoration: none;
+}
+
+.content {
+    min-height: calc(100vh - 100px);
+}
+
+.background {
+    height: 100%;
+    width: 100%;
+}
+
+.background-image {
+    height: 100%;
+    width: 100%;
+}
+
+.footer {
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #f9f9f9;
+    padding: 10px 0;
+    font-size: 14px;
 }
