--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,76 +1,154 @@
-body {
-    background-image: url(../images/hintergrundbild.png);
-    background-size: cover;
+/* ====================================================================================================================
+ * Body Styles
+ * ====================================================================================================================*/
+ body {
+    background-color: #e2d2bc;
     margin: 0;
-    padding-top: 50px;
-    font-family: Arial, sans-serif;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
     color: #333;
 }
 
+/* ====================================================================================================================
+ * Header Styles
+ * ====================================================================================================================*/
 .header {
-    text-align: center;
-    background-color: #f9f9f9;
+    position: fixed; 
+    z-index: 1;
+    top: 0; 
+    width: 100%; 
+    background-color: transparent; 
     padding: 20px;
 }
 
+/* ====================================================================================================================
+ * Logo Styles
+ * ====================================================================================================================*/
 .logo-container {
-    float: left;
+    position: fixed;
+    top: -60px;
+    left: -10px;
+    z-index: 2;
 }
 
 .logo {
-    width: 100px;
-    height: 100px;
+    width: 400px;
+    height: 400px;
 }
 
-.title {
-    font-size: 40px;
-    margin: 0;
-}
-
-.navigation {
-    background-color: #333;
-    padding: 10px;
-}
-
+/* ====================================================================================================================
+ * Navigation Styles
+ * ====================================================================================================================*/
 .nav-links {
     list-style-type: none;
     margin: 0;
-    padding: 0;
-    text-align: center;
+    padding: 50px;
+    text-align: right; 
 }
 
 .nav-item {
-    display: inline;
-    margin: 10px;
+    display: inline-block;
+    margin: 0 30px; 
 }
 
 .nav-item a {
-    font-size: 20px;
-    color: #f9f9f9;
+    font-size: 50px; 
+    color: #b4192b; 
     text-decoration: none;
+    font-weight: bold;
+    font-family: 'Open Sans', sans-serif;
 }
 
-.content {
-    min-height: calc(100vh - 100px);
+.navigation {
+    background-color: rgba(255, 255, 255, 0.8); 
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 20px;
+    text-align: right; 
+    z-index: 1;
 }
 
+/* ====================================================================================================================
+ * Welcome Image Styles
+ * ====================================================================================================================*/
+ .welcome-image {
+    position: relative;
+    text-align: center;
+    width: 100%;
+    height: 100vh;
+    margin-top: -50px; 
+ }
+ 
 .background {
-    height: 100%;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+}
+
+/* ====================================================================================================================
+ * Title Styles
+ * ====================================================================================================================*/
+ .title-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 2;
+}
+
+.title {
+    font-size: 100px; 
+    font-family: 'Open Sans', sans-serif; 
+    color: #f3a340; 
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+}
+
+/* ====================================================================================================================
+ * Button Styles
+ * ====================================================================================================================*/
+ .btn {
+    padding: 25px 45px;
+    font-size: 35px;
+    background-color: rgba(92, 153, 175, 0.4);
+    color: #ffffff;
+    border: none;
+    border-radius: 50px; 
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+    background-color: #0099cc;
+}
+
+/* ====================================================================================================================
+ * Content Styles
+ * ====================================================================================================================*/
+.content {
+    min-height: calc(100vh - 250px);
+}
+
+/* ====================================================================================================================
+ * White Section Styles
+ * ====================================================================================================================*/
+ .white-section {
+    background-color: #fffaed;
+    height: 100vh;
     width: 100%;
 }
 
-.background-image {
-    height: 100%;
-    width: 100%;
-}
-
+/* ====================================================================================================================
+ * Footer Styles
+ * ====================================================================================================================*/
 .footer {
     text-align: center;
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: #f9f9f9;
+    background-color: #f4af5b;
     padding: 10px 0;
-    font-size: 14px;
+    font-size: 30px;
 }
