--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,11 +12,11 @@
  * Header Styles
  * ====================================================================================================================*/
 .header {
-    position: fixed; 
+    position: fixed;
     z-index: 1;
-    top: 0; 
-    width: 100%; 
-    background-color: transparent; 
+    top: 0;
+    width: 100%;
+    background-color: transparent;
     padding: 20px;
 }
 
@@ -26,13 +26,13 @@
 .logo-container {
     position: fixed;
     top: -60px;
-    left: -10px;
-    z-index: 2;
+    left: 150px;
+    z-index: 3;
 }
 
 .logo {
-    width: 400px;
-    height: 400px;
+    width: 350px;
+    height: auto;
 }
 
 /* ====================================================================================================================
@@ -41,45 +41,74 @@
 .nav-links {
     list-style-type: none;
     margin: 0;
-    padding: 50px;
-    text-align: right; 
+    padding: 30px;
+    text-align: right;
 }
 
 .nav-item {
     display: inline-block;
-    margin: 0 30px; 
+    margin: 0 50px;
 }
 
 .nav-item a {
-    font-size: 50px; 
-    color: #b4192b; 
+    font-size: 30px;
+    color: #ffffff;
     text-decoration: none;
     font-weight: bold;
     font-family: 'Open Sans', sans-serif;
+    position: relative;
+}
+
+.nav-item a::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: calc(100% + 20px);
+    height: 100%;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 15px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.nav-item a:hover::before,
+.nav-item.active a::before {
+    opacity: 1;
 }
 
 .navigation {
-    background-color: rgba(255, 255, 255, 0.8); 
+    background-color: rgba(0, 0, 0, 0.8);
     position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
+    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
     padding: 20px;
-    text-align: right; 
+    text-align: center;
     z-index: 1;
+    width: 100%;
+    max-width: 1600px;
+    border-radius: 100px;
+}
+
+.nav-item.active a {
+    color: #fff;
+    text-shadow: 0 0 10px #ffffff;
 }
 
 /* ====================================================================================================================
  * Welcome Image Styles
  * ====================================================================================================================*/
- .welcome-image {
+.welcome-image {
     position: relative;
     text-align: center;
     width: 100%;
     height: 100vh;
-    margin-top: -50px; 
- }
- 
+    margin-top: -50px;
+}
+
 .background {
     width: 100%;
     height: 100vh;
@@ -89,7 +118,7 @@
 /* ====================================================================================================================
  * Title Styles
  * ====================================================================================================================*/
- .title-container {
+.title-container {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -99,22 +128,22 @@
 }
 
 .title {
-    font-size: 100px; 
-    font-family: 'Open Sans', sans-serif; 
-    color: #f3a340; 
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+    font-size: 80px;
+    font-family: 'Open Sans', sans-serif;
+    color: #f3a340;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 /* ====================================================================================================================
  * Button Styles
  * ====================================================================================================================*/
- .btn {
+.btn {
     padding: 25px 45px;
     font-size: 35px;
     background-color: rgba(92, 153, 175, 0.4);
     color: #ffffff;
     border: none;
-    border-radius: 50px; 
+    border-radius: 50px;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
@@ -133,7 +162,7 @@
 /* ====================================================================================================================
  * White Section Styles
  * ====================================================================================================================*/
- .white-section {
+.white-section {
     background-color: #fffaed;
     height: 100vh;
     width: 100%;
@@ -144,11 +173,12 @@
  * ====================================================================================================================*/
 .footer {
     text-align: center;
+    color: #fffaed;
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
     background-color: #f4af5b;
     padding: 10px 0;
-    font-size: 30px;
+    font-size: 20px;
 }
