--- a/public/css/holiday.css
+++ b/public/css/holiday.css
@@ -66,19 +66,19 @@
 
 /* Card */
 .card {
-    width: 300px;
-    height: 350px;
+    width: 400px;
+    height: auto;
     margin: 0 auto;
-    padding: 60px;
+    padding: 40px;
     border-radius: 20px;
     background-image: url("../images/card.png"); 
-    background-position: 0px;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
 }
@@ -97,32 +97,50 @@
 .card .form-label {
     font-size: 20px;
     color: #fffafa;
-    margin-bottom: 25px;
+    margin-bottom: 10px;
+    text-align: left;
 }
 
 .card .form-input {
     width: 100%;
     padding: 10px;
     font-size: 18px;
-    border: 1px solid #f80b0b;
+    border: none;
     border-radius: 4px;
-    margin-bottom: 20px;
+    background-color: rgba(255, 255, 255, 0.8);
+    margin-bottom: 10px;
 }
 
 .card .add-button {
     padding: 10px 20px;
     font-size: 18px;
-    background-color: #ffffff;
-    color: #010202;
+    background-color: #5c99af;
+    color: #fff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-top: 20px;
 }
 
 .card .add-button:hover {
-    background-color: #1acc4f;
+    background-color: #0099cc;
 }
+
+.card .form-input[type="date"] {
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 10px;
+    width: 100%;
+}
+
+.card .form-input[type="date"]::-webkit-calendar-picker-indicator {
+    filter: invert(1);
+}
+
+.card .form-input[type="date"]::-webkit-datetime-edit-fields-wrapper {
+    color: #000;
+}
+
 
 .holidays-list {
     list-style: none;
