--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -101,19 +101,31 @@
 /* ====================================================================================================================
  * Welcome Image Styles
  * ====================================================================================================================*/
-.welcome-image {
+ .welcome-image {
     position: relative;
     text-align: center;
     width: 100%;
     height: 100vh;
     margin-top: -50px;
-}
-
-.background {
+  }
+  
+  .welcome-image::before {
+    content: "";
+    background-color: rgba(0, 0, 0, 0.3);
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
+  }
+  
+  .background {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-}
+  }
+  
+  
 
 /* ====================================================================================================================
  * Title Styles
@@ -162,23 +174,44 @@
 /* ====================================================================================================================
  * White Section Styles
  * ====================================================================================================================*/
-.white-section {
-    background-color: #fffaed;
-    height: 100vh;
-    width: 100%;
-}
+ .white-section {
+    background-color: rgba(0, 0, 0, 0.6);
+    background-image: url("../images/transparent.png");
+    background-blend-mode: multiply; 
+    padding: 30px;
+  }
 
 /* ====================================================================================================================
  * Footer Styles
  * ====================================================================================================================*/
-.footer {
+ .footer {
     text-align: center;
-    color: #fffaed;
+    color: #000000;
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: #f4af5b;
+    background-color: rgba(255, 255, 255, 0.5);
     padding: 10px 0;
     font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-weight: bold;
+}
+
+.footer .year {
+    margin-bottom: 5px;
+}
+
+/* Stile für den Kontakt-Link */
+.ko {
+    color: #000000;
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s ease;
+}
+
+.ko:hover {
+    color: #ff0000;
 }
