--- a/public/css/offers.css
+++ b/public/css/offers.css
@@ -1,13 +1,12 @@
 /* ====================================================================================================================
  * Section Styles
  * ==================================================================================================================== */
- .section {
-  background-color: #f2f2f2;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-family: Arial, sans-serif;
-  color: #333;
+ .switch {
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
 }
 
 /* ====================================================================================================================
