--- a/public/css/priorities.css
+++ b/public/css/priorities.css
@@ -2,6 +2,14 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-image: url("./images/beach2.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: linear-gradient(rgba(250, 250, 250, 0), rgba(51, 204, 133, 0)), url(../images/beach2.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 100px;
 }
 
 .container {
@@ -14,10 +22,11 @@ body {
 .card {
     width: 300px;
     height: 300px;
-    background-color: #f8f8f8;
-    border-radius: 10px;
+    background-color: #02010183;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 30px 50px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 26px -18px inset; 
+    border-radius: 30px;
     padding: 40px;
-    margin: 10px;
+    margin: 20px;
     cursor: pointer; 
 }
 
@@ -26,29 +35,96 @@ h2 {
 }
 
 .choice-button {
-    margin-bottom: 10px;
+    margin-bottom: px;
 }
 
-.card input[type="text"] {
-    display: block;
-    width: 90%;
-    padding: 10px;
-    margin-top: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+
+
+button {
+        padding: 12.5px 30px;
+        border: 0;
+        border-radius: 100px;
+        background-color: #2ba8fb;
+        color: #ffffff;
+        font-weight: Bold;
+        transition: all 0.5s;
+        -webkit-transition: all 0.5s;
+      }
+      
+button:hover {
+        background-color: #6fc5ff;
+        box-shadow: 0 0 20px #6fc5ff50;
+        transform: scale(1.1);
+      }
+      
+button:active {
+        background-color: #3d94cf;
+        transition: all 0.25s;
+        -webkit-transition: all 0.25s;
+        box-shadow: none;
+        transform: scale(0.98);
+      
 }
 
+.card .input-form {
+  position: relative;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.input {
+  border: solid 1.9px #9e9e9e;
+  border-radius: 1.3rem;
+  background: none;
+  padding: 1rem;
+  font-size: 1rem;
+  color: #f8f7f7;
+  transition: border 150ms cubic-bezier(0.4,0,0.2,1);
+}
+
+.textUser {
+  position: absolute;
+  left: 15px;
+  color: #d8d4d4;
+  pointer-events: none;
+  transform: translateY(1rem);
+  transition: 150ms cubic-bezier(0.4,0,0.2,1);
+}
+
+.input:focus, input:valid {
+  outline: none;
+  box-shadow: 1px 2px 5px rgba(133, 133, 133, 0.523);
+  background-image: linear-gradient(to top, rgba(182, 182, 182, 0.199), rgba(252, 252, 252, 0));
+  transition: background 4s ease-in-out;
+}
+
+.input:focus ~ label, input:valid ~ label {
+  transform: translateY(-95%) scale(0.9);
+  padding: 0 .2em;
+  color: #f1ecec2c;
+  left: 80px;
+}
+
+.input:hover {
+  border: solid 1.9px #000002;
+  transform: scale(1.03);
+  box-shadow: 1px 1px 5px rgba(133, 133, 133, 0.523);
+  transition: border-color 1s ease-in-out;
+}
+    
 .slider {
-    width: 100%;
+    width: 95%; 
+    height: 130px; 
+    border-radius: 10px; 
+    background-color: #e0dada; 
 }
 
 .priority-value {
     text-align: center;
-    margin-top: 10px;
+    height: px;
     font-weight: bold;
+    z-index: 2;
+    color: #fff;
 }
 
-.footer {
-    text-align: center;
-    margin-top: 20px;
-}
+
+
