loadtable Holiday, CSS muss noch überarbeitet werden

--- a/public/css/holiday.css
+++ b/public/css/holiday.css
@@ -6,9 +6,17 @@
     background-size: 1;
     padding: 111px;
 }
+/* Holidayselection Section */
+.holidayselection-section {
+    padding: 135px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #fff;
+}
 
 /* Holidays Container */
-.holidays-container {
+.holiday-container {
     max-width: 800px;
     margin: 0 auto;
     text-align: center;
@@ -16,7 +24,7 @@
 }
 
 /* Holidays Title */
-.holidays-title {
+.holiday-title {
     font-size: 35px;
     color: #fff;
     margin-bottom: 20px;
@@ -47,6 +55,12 @@
     border-radius: 4px;
     margin-bottom: 20px;
 }
+/* Button Container */
+.button-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
 
 /* Add Button */
 .add-button {
@@ -59,9 +73,36 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
-
 .add-button:hover {
     background-color: #0099cc;
+}
+/* Delete Button */
+.delete-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.delete-button img {
+    width: 20px;
+    height: 20px;
+}
+/* Table */
+#holidaySelectionList {
+    width: 100%;
+    text-align: center;
+    border-collapse: collapse;
+}
+
+#holidaySelecetionList th {
+    border: 1px solid #ddd;
+    padding: 8px;
+    background-color: #ffffff47;
+    color: white;
+}
+#holidaySelectionList td, #holidaylist tr:nth-child(even) {
+    border: 1px solid #ddd;
+    padding: 8px;
 }
 
 /* Card */
