--- a/public/css/holiday.css
+++ b/public/css/holiday.css
@@ -1,43 +1,11 @@
 /* Holidays Section */
 .holidays-section {
-    background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(216, 213, 213, 0)), url(../images/beach.png);
+    background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(250, 244, 244, 0)), url(../images/beach.png);
     background-position: 0px;
     background-repeat: 0px;
     background-size: 1;
     padding: 111px;
-}
-/* Holidayselection Section */
-.holidayselection-section {
-    padding: 135px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #fff;
-}
-
-/* Holidays Container */
-.holiday-container {
-    max-width: 1000px;
-    margin: 0 auto;
-    text-align: center;
-    margin-top: 200px;
-}
-
-/* Holidays Title */
-.holiday-title {
-    font-size: 35px;
-    color: #ccc;
-    margin-bottom: 20px;
-    text-align: center; 
-}
-
-/* Holidays Form */
-.holidays-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 50px;
-    color: #ccc;
+    background-color: #fff; 
 }
 
 /* Form Label */
@@ -52,15 +20,9 @@
     width: 95%;
     padding: 10px;
     font-size: 18px;
-    border: 1px solid #020101;
+    border: 1px solid #000000;
     border-radius: 200px;
     margin-bottom: 12px;
-}
-/* Button Container */
-.button-container {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
 }
 
 /* Add Button */
@@ -74,69 +36,16 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
+
 .add-button:hover {
     background-color: #0099cc;
-}
-/* Delete Button */
-.delete-button {
-    background: none;
-    border: none;
-    cursor: pointer;
-}
-
-.delete-button img {
-    width: 30px;
-    height: 20px;
-}
-/* Table */
-#holidaySelectionList {
-    width: 40%;
-    text-align: center;
-    border-collapse: collapse;
-}
-
-#holidaySelecetionList th {
-    border: 1px solid #f8f7f7;
-    padding: 8px;
-    background-color: #ffffff47;
-    color: white;
-}
-#holidaySelectionList td, #holidaylist tr:nth-child(even) {
-    border: 1px solid #ddd;
-    padding: 8px;
-}
-
-#yourHolidaylist {
-    margin: 22px;
-    color: #fff;
-    width: 100%;
-    text-align: center;
-    border-collapse: separate;
-    border-spacing: 0;
-    border: 1px solid #ddd;
-    background-color: rgba(2, 1, 1, 0.1);
-}
-
-#yourHolidaylist th {
-    border: 1px solid #ddd;
-    padding: 8px;
-    background-color: rgba(255, 255, 255, 0.1);
-    color: rgb(255, 255, 255);
-}
-
-#yourHolidaylist td {
-    border: 1px solid #ddd;
-    padding: 8px;
-}
-
-#yourHolidaylist tr {
-    background-color: rgba(2, 1, 1, 0.1);
 }
 
 .card {
     position: relative;
     width: 400px;
-    height: 550px;
+    height: 560px;
+    color: #fff;
     background-color: rgba(2, 1, 1, 0.4);
     box-shadow: rgba(0, 0, 0, 0.25) 0px 30px 50px -12px inset,
                 rgba(0, 0, 0, 0.3) 0px 18px 26px -18px inset;
@@ -150,70 +59,57 @@
     transform: scale(1.05);
 }
 
- /* Add Button Styles*/
+/* Add Button Styles */
 .add-button,
 .select-button,
 .update-button {
-padding: 15.5px 30px;
-border-radius: 100px;
-background-color: #2ba8fb;
-color: #ffffff;
-font-weight: bold;
-transition: all 0.5s;
--webkit-transition: all 0.5s;
+    padding: 15.5px 30px;
+    border-radius: 100px;
+    background-color: #2ba8fb;
+    color: #ffffff;
+    font-weight: bold;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
 }
 
 .add-button:hover,
 .select-button:hover,
 .update-button:hover {
-background-color: #6fc5ff;
-box-shadow: 0 0 20px #6fc5ff50;
-transform: scale(1.1);
+    background-color: #6fc5ff;
+    box-shadow: 0 0 20px #6fc5ff50;
+    transform: scale(1.1);
 }
 
 .add-button:active,
 .select-button:active,
 .update-button:active {
-background-color: #3d94cf;
-transition: all 0.25s;
--webkit-transition: all 0.25s;
-box-shadow: none;
-transform: scale(0.98);
+    background-color: #3d94cf;
+    transition: all 0.25s;
+    -webkit-transition: all 0.25s;
+    box-shadow: none;
+    transform: scale(0.98);
 }
 
-
 .btn2 {
-position: absolute;
-right: 20px;
-top: 50%;
-transform: translateY(-50%);
-padding: 15px 25px;
-text-decoration: none;
-font-size: 25px; 
-background-color: rgba(0, 0, 0, 0.4);
-color: #ffffff;
-border: none;
-border-radius: 50px;
-cursor: pointer;
-transition: background-color 0.3s ease;
-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 15px 25px;
+    text-decoration: none;
+    font-size: 25px;
+    background-color: rgba(0, 0, 0, 0.4);
+    color: #ffffff;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 .btn2:hover {
-background-color: rgba(0, 0, 0, 0.8);
-box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.8);
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
 }
 
-.holidays-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    text-align: left;
-}
-
-.holidays-list li {
-    font-size: 16px;
-    color: #d33e11;
-    margin-bottom: 10px;
-}
 
