--- a/public/css/priorities.css
+++ b/public/css/priorities.css
@@ -121,7 +121,13 @@ button:active {
 }
 
 p {
-  color: rgb(128, 255, 128);
+  text-align: center;
+  height: auto;
+  font-weight: lighter;
+  font-size: 50px;
+  line-height: 1px;
+  color: rgb(241, 243, 238);
 }
+
 
 
