--- a/public/css/holiday.css
+++ b/public/css/holiday.css
@@ -67,7 +67,7 @@ transform: scale(0.98);
 .card {
 
     position: relative;
-    width: 550px;
+    width: 600px;
     height: 560px;
     color: #fff;
     background-color: rgba(2, 1, 1, 0.4);
@@ -154,6 +154,27 @@ padding: 8px;
 
 #holidaySelectionList tr {
 background-color: rgba(2, 1, 1, 0.1); 
+}
+.btn2 {
+position: absolute;
+right: 20px;
+top: 50%;
+transform: translateY(-50%);
+padding: 15px 25px;
+text-decoration: none;
+font-size: 25px; 
+background-color: rgba(0, 0, 0, 0.4);
+color: #ffffff;
+border: none;
+border-radius: 50px;
+cursor: pointer;
+transition: background-color 0.3s ease;
+box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.btn2:hover {
+background-color: rgba(0, 0, 0, 0.8);
+box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
 }
 
 
